--- a/ChalletService/src/main/resources/application.yml
+++ b/ChalletService/src/main/resources/application.yml
@@ -54,7 +54,7 @@ spring:
         p6spy: "%(currentTime)|%(executionTime)|%(category)|%(sqlSingleLine)"
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
       dialect: org.hibernate.dialect.MySQLDialect
     open-in-view: false
 
