--- a/ShBankService/src/main/resources/application.yml
+++ b/ShBankService/src/main/resources/application.yml
@@ -53,7 +53,7 @@ spring:
         p6spy: "%(currentTime)|%(executionTime)|%(category)|%(sqlSingleLine)"
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
       dialect: org.hibernate.dialect.MySQLDialect
     open-in-view: false
 
