--- a/ChalletService/src/main/resources/application.yml
+++ b/ChalletService/src/main/resources/application.yml
@@ -3,7 +3,7 @@
 
 spring:
   profiles:
-    active: prod # 로컬(dev) / git(prod)
+    active: dev # 로컬(dev) / git(prod)
 
 ---
 # 로컬(dev) 환경 설정
@@ -57,6 +57,8 @@ spring:
       ddl-auto: validate
       dialect: org.hibernate.dialect.MySQLDialect
     open-in-view: false
+  elasticsearch:
+    uris: "challet.world:9200"
 
 
 springdoc:
