--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.14.1",
     "react-transition-group": "^4.4.5",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
