--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.7",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "vite-plugin-pwa": "^0.20.5",
