--- a/ChalletService/build.gradle
+++ b/ChalletService/build.gradle
@@ -69,6 +69,12 @@ dependencies {
     // spring batch
     implementation 'org.springframework.boot:spring-boot-starter-batch'
 
+    // coolSMS
+    implementation 'net.nurigo:sdk:4.2.7'
+
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 }
 
 dependencyManagement {
