--- a/ChalletService/src/main/resources/application.yml
+++ b/ChalletService/src/main/resources/application.yml
@@ -3,7 +3,7 @@
 
 spring:
   profiles:
-    active: prod # 로컬(dev) / git(prod)
+    active: dev # 로컬(dev) / git(prod)
 
 ---
 # 로컬(dev) 환경 설정
@@ -59,6 +59,9 @@ spring:
     open-in-view: false
   elasticsearch:
     uris: "challet.world:9200"
+  data:
+    redis:
+      url: "challet.world:6379"
 
 
 springdoc:
@@ -87,3 +90,8 @@ management:
     metrics:
       export:
         enabled: true
+
+coolsms:
+  api-key: ${coolsms_api_key}
+  api-secret: ${coolsms_api_secret}
+  sender-number: ${coolsms_sender_number}
