--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -38,6 +38,7 @@
     "recharts": "^2.12.7",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "uuid": "^10.0.0",
     "vite-plugin-pwa": "^0.20.5",
     "zustand": "^4.5.5"
   },
@@ -50,6 +51,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.1",
