--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -21,6 +21,7 @@
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "axios": "^1.7.7",
+    "browser-image-compression": "^2.0.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "global": "^4.4.0",
