--- a/ChalletService/src/main/resources/application.yml
+++ b/ChalletService/src/main/resources/application.yml
@@ -42,6 +42,7 @@ eureka:
 spring:
   application:
     name: challet
+
   datasource:
     url: jdbc:mysql://challet.world:${dbport}/challet-api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -51,6 +52,11 @@ spring:
       maximum-pool-size: 30  # 최대 30개의 연결
       minimum-idle: 10       # 최소 10개의 유휴 연결
       idle-timeout: 30000    # 30초 동안 유휴 상태일 때 연결을 닫음
+
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
   jpa:
     hibernate:
